cv margins reformat

--- a/cv.html
+++ b/cv.html
@@ -57,9 +57,10 @@
                     <div class="job-content">
                         <img src="logos/opensolar.png" alt="OpenSolar" class="company-logo">
                         <div class="job-text">
-                            <h3>Senior Software Engineer at OpenSolar</h3>
-                            <p class="job-location">📍 Remote in Hong Kong</p>
-                            <p class="job-period">📅 June 2025 - Present</p>
+                            <h3>Senior Software Engineer</h3>
+                            <p class="job-company">OpenSolar · Full-time</p>
+                            <p class="job-period">Jun 2025 - Present · 2 mos</p>
+                            <p class="job-location">Hong Kong SAR · Remote</p>
                             <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development, building the 3D Studio using THREE.js for immersive solar system visualization and creating API endpoints for solar partners and system integration.</p>
                         </div>
                     </div>
@@ -69,9 +70,10 @@
                     <div class="job-content">
                         <img src="logos/midsummer.jpg" alt="Midsummer Energy" class="company-logo">
                         <div class="job-text">
-                            <h3>Web Developer at Midsummer Energy</h3>
-                            <p class="job-location">📍 Cambridge, England</p>
-                            <p class="job-period">📅 June 2022 - March 2025</p>
+                            <h3>Web Developer</h3>
+                            <p class="job-company">Midsummer Energy · Full-time</p>
+                            <p class="job-period">Jun 2022 - Mar 2025 · 2 yrs 10 mos</p>
+                            <p class="job-location">Cambridge, England</p>
                             <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs and buildings, add solar panels, and calculate financial payback. I also organized fortnightly talks to encourage knowledge sharing among team members.</p>
                         </div>
                     </div>
@@ -81,9 +83,10 @@
                     <div class="job-content">
                         <img src="logos/cambridge.png" alt="University of Cambridge" class="company-logo">
                         <div class="job-text">
-                            <h3>Mathematics Supervisor at University of Cambridge</h3>
-                            <p class="job-location">📍 Cambridge, England</p>
-                            <p class="job-period">📅 September 2019 - June 2022</p>
+                            <h3>Mathematics Supervisor</h3>
+                            <p class="job-company">University of Cambridge · Part-time</p>
+                            <p class="job-period">Sep 2019 - Jun 2022 · 2 yrs 10 mos</p>
+                            <p class="job-location">Cambridge, England</p>
                             <p>I taught first-year and second-year undergraduates in applied Mathematics and physics: Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was also on the panel for the undergraduate admissions interviews for Downing College.</p>
                         </div>
                     </div>
@@ -93,9 +96,10 @@
                     <div class="job-content">
                         <img src="logos/lbbw.jpg" alt="Landesbank Baden-Württemberg" class="company-logo">
                         <div class="job-text">
-                            <h3>Intern Data Analyst at Landesbank Baden-Württemberg</h3>
-                            <p class="job-location">📍 London, England</p>
-                            <p class="job-period">📅 June 2016 - September 2016</p>
+                            <h3>Intern Data Analyst</h3>
+                            <p class="job-company">Landesbank Baden-Württemberg · Internship</p>
+                            <p class="job-period">Jun 2016 - Sep 2016 · 4 mos</p>
+                            <p class="job-location">London, England</p>
                             <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
                         </div>
                     </div>
@@ -105,9 +109,10 @@
                     <div class="job-content">
                         <img src="logos/sparx.png" alt="Sparx" class="company-logo">
                         <div class="job-text">
-                            <h3>Intern Content Scientist at Sparx</h3>
-                            <p class="job-location">📍 Exeter, England</p>
-                            <p class="job-period">📅 June 2015 - September 2015</p>
+                            <h3>Intern Content Scientist</h3>
+                            <p class="job-company">Sparx · Internship</p>
+                            <p class="job-period">Jun 2015 - Sep 2015 · 4 mos</p>
+                            <p class="job-location">Exeter, England</p>
                             <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
                         </div>
                     </div>
