--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Dan. All rights reserved.</p>
+            <p>&copy; 2024 Daniel Ng. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/dn390/" target="_blank" aria-label="LinkedIn">
                     <svg width="24" height="24" viewBox="0 0 310 310" fill="currentColor">
