--- a/cv.html
+++ b/cv.html
@@ -17,6 +17,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="ideas.html">Ideas</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
