--- a/ideas.html
+++ b/ideas.html
@@ -7,6 +7,7 @@
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="images/daniel_thoughtful.jpeg" as="image" type="image/jpeg">
 </head>
 <body>
     <header>
@@ -15,9 +16,8 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="ideas.html">Ideas</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -31,6 +31,9 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
+                    <div class="profile-photo">
+                        <img src="images/daniel_thoughtful.jpeg" alt="Daniel's thoughtful profile picture" loading="eager" fetchpriority="high">
+                    </div>
                     <h1>Ideas</h1>
                     <p>My thoughts on design principles and personal aspirations.</p>
                 </div>
