update profile picture

--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_pink.jpeg" alt="Daniel Ng" onclick="openModal(this.src)">
+                        <img src="images/daniel_yellow.jpg" alt="Daniel Ng" onclick="openModal(this.src)">
                     </div>
                     <h1>Curriculum Vitae</h1>
                     <p>My professional journey, skills, and experience in technology and mathematics.</p>
