--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="head-common.css"></noscript>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" href="images/daniel_yellow.jpg" as="image" type="image/jpeg">
+    <link rel="preload" href="images/daniel_faded.jpeg" as="image" type="image/jpeg">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture" loading="eager" fetchpriority="high">
+                        <img src="images/daniel_faded.jpeg" alt="Daniel's profile picture" loading="eager" fetchpriority="high">
                     </div>
                     <h1>Hi there!</h1>
                     <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
