--- a/cv.html
+++ b/cv.html
@@ -62,7 +62,7 @@
                         <div class="job-text">
                             <h3>Senior Software Engineer</h3>
                             <p class="job-company">OpenSolar · Full-time</p>
-                            <p class="job-period">Jun 2025 - Present · 2 mos</p>
+                            <p class="job-period">Jun 2025 - Present</p>
                             <p class="job-location">Hong Kong SAR · Remote</p>
                             <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development, building the 3D Studio using THREE.js for immersive solar system visualization and creating API endpoints for solar partners and system integration.</p>
                         </div>
