modify book description

--- a/ideas.html
+++ b/ideas.html
@@ -61,7 +61,7 @@
                 <p>I love exploring new languages and cultures. There's something fascinating about how different languages structure thought and express ideas. Each language opens up new ways of seeing the world.</p>
                 
                 <h3>Reading</h3>
-                <p>Books are my gateway to different worlds, ideas, and perspectives. I enjoy both fiction and non-fiction, particularly books about technology, philosophy, and human nature.</p>
+                <p>Books are my gateway to different worlds, ideas, and perspectives. I'm particularly drawn to detective and mystery novels for their clever puzzles and storytelling, personal development books that help me grow, and technology books that keep me informed about the latest innovations and trends.</p>
                 
                 <h3>Travel</h3>
                 <p>Exploring new places helps me understand different cultures and ways of life. I find that travel broadens my perspective and often provides fresh insights that I can bring back to my work and relationships.</p>
