add music as interest

--- a/ideas.html
+++ b/ideas.html
@@ -68,6 +68,9 @@
                 
                 <h3>Fitness</h3>
                 <p>I enjoy the discipline and progress that comes with regular exercise. There's something deeply satisfying about building strength, improving my physique, and maintaining a healthy lifestyle. The gym is my space for both physical and mental growth.</p>
+                
+                <h3>Music</h3>
+                <p>I'm passionate about rock and metal music, drawn to their energy and complexity. I also love classical piano music, especially Chopin and Rachmaninoff - their emotional depth and musical complexity really resonate with me. Among my musical experiences is participating in an Eastern Orthodox choir at a Russian church, singing in Slavonic - an experience that cultivated my appreciation for traditional choral music and cultural expression.</p>
             </section>
 
             <section class="content-section">
