--- a/gallery.html
+++ b/gallery.html
@@ -58,8 +58,16 @@
         <div class="lightbox-content">
             <img src="" alt="" id="lightboxImage">
             <button class="lightbox-close" id="lightboxClose">&times;</button>
-            <button class="lightbox-nav lightbox-prev" id="lightboxPrev">&lt;</button>
-            <button class="lightbox-nav lightbox-next" id="lightboxNext">&gt;</button>
+            <button class="lightbox-nav lightbox-prev" id="lightboxPrev">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="15,18 9,12 15,6"></polyline>
+                </svg>
+            </button>
+            <button class="lightbox-nav lightbox-next" id="lightboxNext">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9,18 15,12 9,6"></polyline>
+                </svg>
+            </button>
         </div>
     </div>
 
