--- a/about.html
+++ b/about.html
@@ -171,6 +171,59 @@
                     Midsummer employee saw my LinkedIn post, and connected me with OpenSolar, a company with a very
                     similar business model but operates worldwide. I'm now working as a Senior Software Developer
                     remotely, helping them with their 3.0 launch in September 2025.</p>
+
+                <h2>私の物語</h2>
+                <p>私の人生の最初の25年間、数学こそが自分の運命だと思っていました。子供の頃から抽象的な数学の概念に魅了され、父の計算機で遊びながらその仕組みを解き明かそうと何時間も過ごしたものです。</p>
+                <p>中学校から高校にかけて、私は数学と物理の頼れる存在でした。内向的な生徒でしたが、質の高い課題をこなし、クラスメイトが助けを求めるといつでも手を貸していました。時には昼休みに空き教室に入り込み、ホワイトボードに複雑な数式を書き連ねることもありました。
+                </p>
+                <p>ケンブリッジ大学で数学を学ぶのは自然な選択に思えました。課題は義務というより趣味のようなもの。試験も負担ではなく冒険のように感じました。知的な環境を楽しみ、アカデミアでのキャリアに大きな期待を寄せていました。
+                </p>
+                <p>バース大学で博士号を取得する奨学金を得た私は、解析学と確率論を専攻することにしました。研究の傍ら、1・2年生の大学生10～20人を対象にチュートリアル（指導授業）も行っていました。</p>
+                <p>ほどなく、私は研究よりも教育にはるかにやりがいを感じることに気付きました。今後3年間を捧げたいと思う研究テーマを見つけられず、次から次へと話題を変えていました。一方で、迷走する研究とは対照的に、教えることの即時的効果は私に大きな喜びをもたらしました。抽象的な数学の概念を鮮やかな比喩やストーリーで説明できることに気付くと、他のクラスの生徒までもが私のチュートリアルに集まるようになりました。
+                </p>
+                <p>私は型破りな教授法とZ世代のニーズに対応する指導で知られるようになりました。例えばある晴れた日、薄暗い教室で教える代わりに、学生たちを連れて大学の湖沿いの野外劇場へ。そこで移動式ホワイトボードを使って固有ベクトルを教えたこともあります。
+                </p>
+                <p>学生たちは熱心に応えてくれ、強い信頼関係が築けました。あるクラスからは感謝のカードとジンのボトルまで贈られました。大学の「優秀教育賞」にノミネートされ、他の優秀な教育者たちと共にガラディナーに招待されたこともあります。
+                </p>
+                <p>この時点で、研究は目標ではなく「気が散る要素」でしかないことが明らかになりました。選択は難しくありませんでした。ある日、指導教官に「研究ではなく教育の道へ進みたい」と伝えたのです。アカデミアにはティーチングフェローなどの教育職もありますが、研究実績がないとキャリア的には不利です。そこで私はPGCE（教職課程）に登録し、中学校・高校の数学教員免許を取得することを決めました。
+                </p>
+                <p>バース・スパ大学から奨学金付きの数学教員養成コースのオファーを獲得。面接は驚くほど楽しい経験でした。面接官の教師陣に向けて自由に授業を行う課題では、当時まだ有名ではなかったWordleの変種ゲームで確率論を教えるという方法を選びました。
+                </p>
+                <p>しかし予期せぬ展開が。ケンブリッジ大学マグダレンカレッジの学部長から、前任者の退職に伴い数学スーパーバイザー（個別指導教官）として働かないかと誘いを受けたのです。この機会を逃すわけにはいかず、PGCEへの再応用は翌年に延期してこの職を受けました。
+                </p>
+                <p>こうして私はケンブリッジに戻り、前任者の学生たちを引き継ぎました。バース大学の講義形式とは異なり、ケンブリッジでは1対1または1対2の指導が主流です。私は指導スタイルをより個別的で双方向的なものに調整しました。仕事外の時間がたっぷりある自律性の高い、とてもリラックスできる職場でした。
+                </p>
+                <p>そこにCOVID-19のパンデミックが襲来。全ての授業がオンラインに移行し、Zoomを通じて指導を続けました。この期間中、私は独自の教材セットを開発し、練習問題をLaTeXで整然と作成。学生向けの個人ウェブサイトも立ち上げました。
+                </p>
+                <p>状況によりPGCEの計画は断念せざるを得ませんでした。学校は厳格なソーシャルディスタンス規則を実施し、教室での授業は大きく混乱していたからです。代わりにケンブリッジでスーパーバイザーを続けながら、他のカレッジからもより多くの科目と学生を引き受けることに。ケンブリッジでは慢性的にスーパーバイザーが不足していたため、各カレッジの学部長たちは大歓迎してくれました。
+                </p>
+                <p>この時期にはダウニングカレッジの入学面接官も務めました。難易度が段階的に上がる面接問題を作成し、Zoomで受験者と対面。驚いたのは受験者の能力差でした。恐怖でまともに答えられない者もいれば、難問を軽々と解く者も。ある受験者は私たちを凌ぐ巧妙な解法を披露し、面接後にかえって私たちがその答えを検証するほどでした。
+                </p>
+                <p>スーパーバイザー兼面接官としての特権もありました。ダウニングカレッジの教授たちとハイテーブルを囲み、知的な議論を交わしながら無制限のサラダ・メインコース・デザートを楽しむ食事権。満腹後は共有ラウンジへ移動し、バリスタ品質のコーヒーマシンでマキアートを淹れ、高級ソファに沈みながら数学書を読むという優雅な時間です。
+                </p>
+                <p>スーパーバイザー3年目、化学を専攻した弟が香港でソフトウェア業界に転身しました。技術の進化が止まらず、開発者が常に学び続ける必要があるこの職種を彼は楽しんでいました。この話に触発され、私は教職という当初の計画を見直し、この分野への転身を真剣に考え始めました。新しい科目を教え続けてはいたものの、教育の反復的な性質に少しずつ倦怠感を覚え始めていたのです。
+                </p>
+                <p>様々なプログラミング言語を探求し始めました。これが予想外に楽しく、特にコンパイル時型チェックのある言語に惹かれていきました。Javaから始め、この言語の問題のある癖に悩まされつつもコンピュータサイエンスの基礎を固めました。Advent
+                    of CodeのようなパズルでJavaを試した後、より洗練された設計のRustやHaskellにも手を伸ばしました。</p>
+                <p>2022年初夏、ケンブリッジを辞めてソフトウェア開発に転身する意向を表明。学部長は残念がりつつも理解を示し、後ろ髪を引かれることなく去ることができました。</p>
+                <p>いくつかのJava職に応募し魅力的なオファーも得ましたが、予想外の展開でMidsummer
+                    Energyのフロントエンド開発者（メイン言語JavaScript）として採用されることに。創設者の熱意と「英国にクリーンエネルギーを」という企業理念に心動かされ、Java以外の道を受け入れる決断をしました。OJTでフロントエンド開発を学べる環境も用意してくれたのです。
+                </p>
+                <p>Midsummer
+                    Energyの立地はソフトウェア企業のイメージとはかけ離れていました。セメント工場と塗料卸売業者に挟まれた老朽化した工業団地。太陽光パネルの倉庫に併設されたオフィスでは、フォークリフトが終日ソーラー機器の箱を運び回っています。
+                </p>
+                <p>実際、Midsummerはソフトウェア企業としてマーケティングされていません。コーディングに情熱を持つ創設者が偶々作った小さな開発チームを持つエネルギー企業なのです。アンディは2005年、狭いボートハウスで近隣住民に太陽光パネルを売りながら質素な生活を送りつつ会社を始めました。顧客が増えるにつれ、販売管理用にウェブサイトを作りました。15年以上を経て、現在は英国2拠点・アイルランド1拠点、50名以上のチームに成長しています。
+                </p>
+                <p>私が加入した当時、開発チームはアンディを含め5名。直近の展示会向け3Dスタジオ構築を任されました。THREE.jsの独学から始め、家や木の形状をレンダリングし太陽光グリッドの影をモデリングするプロトタイプを完成させました。
+                </p>
+                <p>小規模ながら、ソフトウェアチームは急速に拡大。ウクライナ戦争による電力価格高騰で太陽光パネル需要が急増し、収益の好転で開発者が続々採用され、10名以上に。オフィスのデスクがほぼ埋まるほどでした。</p>
+                <p>Midsummerの企業文化は特異でした。英国流のアルコール中心のアフターファイブ文化が苦手な私でも、強制されない環境で同僚と深い友情を築けました。美食仲間とミシュラン1星目前のレストラン2店を含むケンブリッジの高級飲食店巡りを楽しみ、地元農園の無料野菜袋で珍しい紫豆の料理に挑戦。犬連れ出勤日には同僚の愛犬たちと戯れました。
+                </p>
+                <p>会社への貢献が認められ、わずか2年でフロントエンドリーダーに昇進。Heatpunkウェブサイトの刷新を主導し、デザインチームと協力して洗練された現代的なインターフェースを実現。マーケティングチームと組んだHeatpunk製品の新ランディングページも成功を収めました。
+                </p>
+                <p>2025年、家族と過ごすため香港へ帰郷せざるを得ず、同社を去りました。幸運にも元同僚のLinkedIn投稿がきっかけで、世界的に展開する同業他社OpenSolarのシニアソフトウェア開発者としてリモート勤務中。2025年9月のバージョン3.0ローンチを支えています。
+                </p>
+
             </section>
         </div>
     </main>
