--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="ideas.html">Ideas</a></li>
+                <li><a href="writings.html">Writings</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
