--- a/cv.html
+++ b/cv.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Daniel's Personal Website</title>
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="head-common.css"></noscript>
+    <noscript>
+        <link rel="stylesheet" href="head-common.css">
+    </noscript>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav class="container">
@@ -16,6 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="ideas.html">Ideas</a></li>
+                <li><a href="writings.html">Writings</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
@@ -43,7 +48,9 @@
         <div class="container">
             <section class="content-section">
                 <h2>Skills & Expertise</h2>
-                <p>Trained as a mathematician, I am always keen to solve new problems. The last 3 years have mostly been focused on building an aesthetic front-end with JavaScript/TypeScript while optimizing for speed. In addition to programming languages, I am also conversational in various foreign languages.</p>
+                <p>Trained as a mathematician, I am always keen to solve new problems. The last 3 years have mostly been
+                    focused on building an aesthetic front-end with JavaScript/TypeScript while optimizing for speed. In
+                    addition to programming languages, I am also conversational in various foreign languages.</p>
                 <ul>
                     <li><strong>Frontend:</strong> JavaScript, TypeScript, THREE.js, React, HTML5, CSS3</li>
                     <li><strong>Backend:</strong> API Development, Node.js, Database Design</li>
@@ -56,7 +63,7 @@
 
             <section class="content-section">
                 <h2>Experience</h2>
-                
+
                 <div class="job-info">
                     <div class="job-content">
                         <img src="logos/opensolar.png" alt="OpenSolar" class="company-logo">
@@ -65,7 +72,10 @@
                             <p class="job-company">OpenSolar · Full-time</p>
                             <p class="job-period">Jun 2025 - Present</p>
                             <p class="job-location">Hong Kong SAR · Remote</p>
-                            <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid installers. My role spans both frontend and backend development, building the 3D Studio using THREE.js for immersive solar system visualization and creating API endpoints for solar partners and system integration.</p>
+                            <p>I work remotely for OpenSolar, the leading software tool in Australia for solar grid
+                                installers. My role spans both frontend and backend development, building the 3D Studio
+                                using THREE.js for immersive solar system visualization and creating API endpoints for
+                                solar partners and system integration.</p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +88,9 @@
                             <p class="job-company">Midsummer Energy · Full-time</p>
                             <p class="job-period">Jun 2022 - Mar 2025 · 2 yrs 10 mos</p>
                             <p class="job-location">Cambridge, England</p>
-                            <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs and buildings, add solar panels, and calculate financial payback. I also organized fortnightly talks to encourage knowledge sharing among team members.</p>
+                            <p>I led a team of junior developers where we worked on 2D and 3D editors to create roofs
+                                and buildings, add solar panels, and calculate financial payback. I also organized
+                                fortnightly talks to encourage knowledge sharing among team members.</p>
                         </div>
                     </div>
                 </div>
@@ -91,7 +103,9 @@
                             <p class="job-company">University of Cambridge · Part-time</p>
                             <p class="job-period">Sep 2019 - Jun 2022 · 2 yrs 10 mos</p>
                             <p class="job-location">Cambridge, England</p>
-                            <p>I taught first-year and second-year undergraduates in applied Mathematics and physics: Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was also on the panel for the undergraduate admissions interviews for Downing College.</p>
+                            <p>I taught first-year and second-year undergraduates in applied Mathematics and physics:
+                                Differential Equations, Matrices, Quantum Mechanics, Electromagnetism and more. I was
+                                also on the panel for the undergraduate admissions interviews for Downing College.</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +118,9 @@
                             <p class="job-company">Landesbank Baden-Württemberg · Internship</p>
                             <p class="job-period">Jun 2016 - Sep 2016 · 4 mos</p>
                             <p class="job-location">London, England</p>
-                            <p>I made predictions for bond sales and purchases based on a large training data set (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost. The code was written in the statistical package R.</p>
+                            <p>I made predictions for bond sales and purchases based on a large training data set
+                                (100,000+ entries) using Machine Learning techniques such as random forest and XGBoost.
+                                The code was written in the statistical package R.</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +133,9 @@
                             <p class="job-company">Sparx · Internship</p>
                             <p class="job-period">Jun 2015 - Sep 2015 · 4 mos</p>
                             <p class="job-location">Exeter, England</p>
-                            <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My role was to write questions pedagogically and to analyse the data from the students' attempts using the statistical language R.</p>
+                            <p>I helped develop an educational iPad app that aims to teach children GCSE Mathematics. My
+                                role was to write questions pedagogically and to analyse the data from the students'
+                                attempts using the statistical language R.</p>
                         </div>
                     </div>
                 </div>
@@ -125,7 +143,7 @@
 
             <section class="content-section">
                 <h2>Education</h2>
-                
+
                 <div class="education-item">
                     <div class="education-content">
                         <img src="logos/cambridge.png" alt="University of Cambridge" class="education-logo">
@@ -169,18 +187,20 @@
                 <a href="https://www.linkedin.com/in/dn390/" target="_blank" aria-label="LinkedIn">
                     <svg width="24" height="24" viewBox="0 0 310 310" fill="currentColor">
                         <path d="M72.16,99.73H9.927c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5H72.16c2.762,0,5-2.238,5-5V104.73
-                            C77.16,101.969,74.922,99.73,72.16,99.73z"/>
+                            C77.16,101.969,74.922,99.73,72.16,99.73z" />
                         <path d="M41.066,0.341C18.422,0.341,0,18.743,0,41.362C0,63.991,18.422,82.4,41.066,82.4
-                            c22.626,0,41.033-18.41,41.033-41.038C82.1,18.743,63.692,0.341,41.066,0.341z"/>
+                            c22.626,0,41.033-18.41,41.033-41.038C82.1,18.743,63.692,0.341,41.066,0.341z" />
                         <path d="M230.454,94.761c-24.995,0-43.472,10.745-54.679,22.954V104.73c0-2.761-2.238-5-5-5h-59.599
                             c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5h62.097c2.762,0,5-2.238,5-5v-98.918c0-33.333,9.054-46.319,32.29-46.319
                             c25.306,0,27.317,20.818,27.317,48.034v97.204c0,2.762,2.238,5,5,5H305c2.762,0,5-2.238,5-5V194.995
-                            C310,145.43,300.549,94.761,230.454,94.761z"/>
+                            C310,145.43,300.549,94.761,230.454,94.761z" />
                     </svg>
                 </a>
                 <a href="https://github.com/dngzz1" target="_blank" aria-label="GitHub">
                     <svg width="24" height="24" viewBox="0 0 1024 1024" fill="currentColor">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z" transform="scale(64)"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z"
+                            transform="scale(64)" />
                     </svg>
                 </a>
             </div>
@@ -197,4 +217,5 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+
+</html>
