--- a/writings.html
+++ b/writings.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel's Personal Website</title>
+    <title>Writings - Daniel's Personal Website</title>
     <link rel="preload" href="head-common.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="head-common.css">
     </noscript>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" href="images/daniel_faded.jpeg" as="image" type="image/jpeg">
+    <link rel="preload" href="images/daniel_thoughtful.jpeg" as="image" type="image/jpeg">
 </head>
 
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Daniel Ng</div>
+            <div class="logo"><a href="index.html">Daniel Ng</a></div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="ideas.html">Ideas</a></li>
-                <li><a href="writings.html">Writings</a></li>
+                <li><a href="writings.html" class="active">Writings</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="cv.html">CV</a></li>
             </ul>
@@ -34,37 +34,54 @@
     </header>
 
     <main>
-        <section class="hero" id="home">
+        <section class="hero">
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_faded.jpeg" alt="Daniel's profile picture" loading="eager"
-                            fetchpriority="high">
+                        <img src="images/daniel_thoughtful.jpeg" alt="Daniel's thoughtful profile picture"
+                            loading="eager" fetchpriority="high">
                     </div>
-                    <h1>Hi there!</h1>
-                    <p>Welcome to my personal website. I'm excited to share my journey with you.</p>
-                    <a href="about.html" class="cta-button">Learn More</a>
+                    <h1>Writings</h1>
+                    <p>My thoughts, reflections, and written works.</p>
                 </div>
             </div>
         </section>
 
         <div class="container">
             <section class="content-section">
-                <h2>Welcome to My Portfolio</h2>
-                <p>Hi there! I'm Daniel, a passionate developer originally trained as a mathematician. In my spare time
-                    I love learning languages.</p>
-                <p>With a background in software development and a keen eye for design, I enjoy creating elegant
-                    solutions that make a difference. I believe in continuous learning and pushing the boundaries of
-                    what's possible.</p>
-                <p>When I'm not coding, you can find me exploring new technologies, contributing to open source
-                    projects, or sharing knowledge with the developer community.</p>
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
+
+                <h2>Sed ut perspiciatis</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                    dicta sunt explicabo.</p>
+
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+                    quia dolor sit amet, consectetur, adipisci velit.</p>
+
+                <h2>At vero eos</h2>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                    provident.</p>
+
+                <p>Similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum
+                    quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi
+                    optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.</p>
             </section>
         </div>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Daniel. All rights reserved.</p>
+            <p>&copy; 2024 Daniel Ng. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/dn390/" target="_blank" aria-label="LinkedIn">
                     <svg width="24" height="24" viewBox="0 0 310 310" fill="currentColor">
@@ -88,14 +105,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Image Modal -->
-    <div id="imageModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="modalImage" src="" alt="Enlarged profile picture">
-        </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
