--- a/writings.html
+++ b/writings.html
@@ -49,14 +49,44 @@
 
         <div class="container">
             <section class="content-section">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <h2>On Coffee: A Personal Reckoning</h2>
+                <p>For years, coffee was my faithful companion—a ritual that punctuated my days with reliable
+                    precision. Three times daily, I would reach for that familiar cup, drawn not merely by caffeine's
+                    promise but by the rich, complex flavors that danced on my palate. There was something deeply
+                    satisfying about the entire experience: the aroma that filled the room, the warmth between my
+                    hands, and that first transformative sip that seemed to awaken both mind and spirit.</p>
 
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum.</p>
+                <p>Yet as with many relationships built on dependency, the honeymoon period eventually revealed its
+                    shadows. The very substance that once energized me began to exact its toll. Dehydration became
+                    an unwelcome constant, and what I came to recognize as the dreaded "post-coffee crash" would leave
+                    me more depleted than before that first morning cup. The cycle was as predictable as it was
+                    frustrating—a temporary elevation followed by an inevitable descent.</p>
+
+                <p>One summer, driven by curiosity rather than desperation, I decided to experiment with abstinence.
+                    What surprised me most was not the difficulty of quitting, but the absence of difficulty altogether.
+                    No headaches, no irritability, no desperate cravings—just a gentle transition to matcha, whose
+                    subtle earthiness and sustained energy proved a worthy substitute. This experience offered me an
+                    unexpected gift of self-knowledge: I discovered that I lack what psychologists call an addictive
+                    personality. This realization brought immense relief and a deeper understanding of my relationship
+                    with substances.</p>
+
+                <p>Today, I've returned to coffee, but with the wisdom that comes from temporary separation. One cup
+                    in the morning, generously tempered with milk, provides all the pleasure without the pitfalls of
+                    my former excess. It's a relationship redefined by moderation rather than need—a small but
+                    meaningful victory in the art of mindful consumption.</p>
+
+                <h2>コーヒーについての私的省察</h2>
+                <p>長年、コーヒーは私の忠実な相棒だった。一日を規則正しく区切る、欠かせない儀式のように。一日三度、私は慣れ親しんだカップに手を伸ばした。それは単にカフェインへの渇望からではなく、舌の上で踊る豊かで複雑な風味に惹かれてのこと。コーヒーを淹れる香りが部屋に広がり、手のひらに伝わる温もり、そして心と頭を一瞬で覚醒させるかのような最初の一口——そのすべてに、深い満足があった。
+                </p>
+
+                <p>しかし、依存性を土台に築かれた多くの関係と同じく、蜜月の時期はやがて影を落とすようになった。かつて私に活力を与えてくれたその液体は、次第に代償を要求し始めた。脱水はつきものとなり、いわゆる「コーヒー後のクラッシュ」は、朝一番の一杯の前よりもかえって疲弊させるようになった。一時的な高揚の後に必ず訪れる下降——そのパターンは予測可能で、苛立たしいものだった。
+                </p>
+
+                <p>ある夏、必死さではなく純粋な好奇心から、私はコーヒーを断つ実験をしてみることにした。驚いたことに、やめること自体には何の苦しみもなかった。頭痛も、イライラも、激しい渇望もなく、抹茶への穏やかな移行が自然と起こった。その控えめな土の香りと持続的なエネルギーは、申し分ない代役となってくれた。この経験は、思いがけない自己認識をもたらしてくれた。心理学者の言う「依存性人格」が、私にはないのだと気づいたのである。この発見は、大きな安堵と、物質との関わり方に対する深い理解をもたらしてくれた。
+                </p>
+
+                <p>今の私は、コーヒーと再会している。しかし、一時的な別離を経た者の分別を持って。朝たった一杯、たっぷりのミルクで和らげられたそれは、かつての過剰摂取に伴った落とし穴なしに、純粋な喜びだけを与えてくれる。必要に駆られた関係ではなく、節度によって再定義された関係——それは、マインドフルな消費のささやかながらも意味ある勝利なのだ。
+                </p>
 
                 <h2>Sed ut perspiciatis</h2>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
