proper japanese punctuation

--- a/writings.html
+++ b/writings.html
@@ -147,10 +147,10 @@
                 <p>競技の日が来て、彼は3位に入賞しました。その瞬間は、複雑な感情の渦に包まれていたと想像します。入賞の喜びと、勝利を逃した悔しさの入り混じった感情。成功ではありましたが、彼が最初にその運命的な決断を下した時に思い描いていたようなものではありませんでした。
                 </p>
 
-                <p>1年後、私は彼のYouTubeチャンネルを偶然見つけ、彼の物語の冷徹なエピローグを発見しました。かつて理論上は軽視していた副作用が、彼の現実となっていました—脱毛、機能の低下、そして徐々に忍び寄る幻滅感。彼の言葉は私に予期せぬ力を与えました：「体に何かを注入して、ただ平均以下であることの意味は何だろうか？」強化されたコミュニティの中でも、彼は目立たない位置にいることに気づいたのです。
+                <p>1年後、私は彼のYouTubeチャンネルを偶然見つけ、彼の物語の冷徹なエピローグを発見しました。かつて理論上は軽視していた副作用が、彼の現実となっていました。脱毛、機能の低下、そして徐々に忍び寄る幻滅感。彼の言葉は私に予期せぬ力を与えました。「体に何かを注入して、ただ平均以下であることの意味は何だろうか？」強化されたコミュニティの中でも、彼は目立たない位置にいることに気づいたのです。
                 </p>
 
-                <p>その啓示は、私にとって深い意味を持つものとなりました。私はパフォーマンス向上剤を真剣に考えたことはありませんでしたが、変身についての空想をすることは確かにありました。彼の旅—希望に満ちた野心から、控えめな成功、そして最終的な後悔まで—を目の当たりにすることは、万能薬は存在せず、トレードオフがあるという厳しい現実を思い出させてくれました。オンラインのフィットネス文化に溢れる華やかな約束は、しばしばより複雑な現実を隠しています：個人の反応は劇的に異なり、近道はしばしば予期せぬ目的地へと導くのです。
+                <p>その啓示は、私にとって深い意味を持つものとなりました。私はパフォーマンス向上剤を真剣に考えたことはありませんでしたが、変身についての空想をすることは確かにありました。彼の旅（希望に満ちた野心から、控えめな成功、そして最終的な後悔まで）を目の当たりにすることは、万能薬は存在せず、トレードオフがあるという厳しい現実を思い出させてくれました。オンラインのフィットネス文化に溢れる華やかな約束は、しばしばより複雑な現実を隠しています。個人の反応は劇的に異なり、近道はしばしば予期せぬ目的地へと導くのです。
                 </p>
 
                 <p>その反省の瞬間に、私は自分の遺伝子と、自然な手段で達成した進歩に深い感謝の念を抱きました。時には、最も価値のある教訓は自分自身の経験からではなく、他者の選択の勇気とその結果を目の当たりにすることから得られるのです。
