--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 
         <div class="container">
             <section class="content-section">
+                <h1>About Me</h1>
                 <h2>My Story</h2>
                 <p>For the first 25 years of my life, I believed Mathematics was my destiny. As a child, I was already
                     fascinated by abstract mathematical concepts, and would spend hours playing with my father's
