--- a/cv.html
+++ b/cv.html
@@ -37,6 +37,7 @@
 
         <div class="container">
             <section class="content-section">
+                <h1>Curriculum Vitae</h1>
                 <h2>Skills & Expertise</h2>
                 <p>Trained as a mathematician, I am always keen to solve new problems. The last 3 years have mostly been
                     focused on building an aesthetic front-end with JavaScript/TypeScript while optimizing for speed. In
