--- a/ideas.html
+++ b/ideas.html
@@ -38,6 +38,7 @@
 
         <div class="container">
             <section class="content-section">
+                <h1>Ideas</h1>
                 <h2>My Principles on UI Design</h2>
                 <p>I've seen enough counterexamples of how software can be designed poorly. Here are some principles
                     that I strive to follow when designing a UI:</p>
