--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="head-common.css">
     </noscript>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" href="images/daniel_faded.jpeg" as="image" type="image/jpeg">
+    <link rel="preload" href="images/daniel_yellow.jpg" as="image" type="image/jpeg">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="profile-photo">
-                        <img src="images/daniel_faded.jpeg" alt="Daniel's profile picture" loading="eager"
+                        <img src="images/daniel_yellow.jpg" alt="Daniel's profile picture" loading="eager"
                             fetchpriority="high">
                     </div>
                     <h1>Hi there!</h1>
