--- a/writings.html
+++ b/writings.html
@@ -14,24 +14,7 @@
 </head>
 
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo"><a href="index.html">Daniel Ng</a></div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="ideas.html">Ideas</a></li>
-                <li><a href="writings.html" class="active">Writings</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="cv.html">CV</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
-    </header>
+    <header></header>
 
     <main>
         <div class="container">
@@ -89,6 +72,7 @@
         </div>
     </footer>
 
+    <script src="nav.js"></script>
     <script src="script.js"></script>
 </body>
 
