--- a/writings/2025-08-08-digital-organization-portable-knowledge.html
+++ b/writings/2025-08-08-digital-organization-portable-knowledge.html
@@ -24,7 +24,9 @@
                 </header>
 
                 <div class="article-content">
-                    <p>I recently watched Zach Highley's video "How I Organized My Entire Life Using Just Apple Notes,"
+                    <p>I recently watched Zach Highley's video <a
+                            href="https://www.youtube.com/watch?v=IMJSkU3rVNg&ab_channel=ZachHighley" target="_blank"
+                            rel="noopener noreferrer">"How I Organized My Entire Life Using Just Apple Notes,"</a>
                         and it sparked some reflection on the eternal quest for the perfect organizational system. His
                         approach—consolidating everything into a single, native application—has undeniable merit.
                         There's something refreshingly honest about abandoning the complexity of multiple interconnected
@@ -65,38 +67,6 @@
                         but one that aligns with my values of digital self-sufficiency and long-term thinking. Sometimes
                         the best system isn't the most efficient one, but the one that will still be working twenty
                         years from now.</p>
-                </div>
-
-                <hr class="section-divider">
-
-                <div class="article-content japanese-section">
-                    <header class="article-header">
-                        <h2>デジタル整理術について：ポータブルな知識の価値</h2>
-                        <time class="article-date">2025年8月8日</time>
-                    </header>
-
-                    <p>最近、ザック・ハイリーの「Apple
-                        Notesだけで人生を整理する方法」という動画を見て、完璧な整理システムを求める永続的な探求について考えさせられました。彼のアプローチ——すべてを単一のネイティブアプリケーションに統合する——には確かに利点があります。複数の相互接続システムの複雑さを放棄し、シンプルさを受け入れることには、率直で清々しいものがあります。
-                    </p>
-
-                    <p>ハイリーの中心的な論点には共感できます。Notion、Evernote、Obsidianなどの生産性アプリの拡散は、しばしば解決するよりも多くの摩擦を生み出します。絶え間ない同期、機能の肥大化、どの情報がどこにあるかを覚えておく認知的負荷——これらは多くのデジタル知識労働者を悩ませる本当の問題です。Apple
-                        Notesによる根本的なシンプル化という彼の解決策は、この複雑さからのエレガントな脱出を提供します。</p>
-
-                    <p>しかし、彼のアプローチを検討しながら、私は問題の全く異なる次元を評価していることに気づきました：ポータビリティです。Apple
-                        NotesはAppleエコシステム内では優秀ですが、私を躊躇させるデジタル依存の形を表しています。私の心は、ここで構築している知識ベース——HTMLとマークダウンで書かれ、プレーンテキストファイルとして保存され、完全にプラットフォーム非依存で永続的にアクセス可能——に向かいました。
-                    </p>
-
-                    <p>特定の企業、オペレーティングシステム、技術的パラダイムを超えて生き続ける形式で知識を創造することには、深い満足感があります。HTMLは30年以上前から私たちと共にあり、マークダウンのシンプルさはその長寿命を保証します。これらは単なる保存形式ではありません。デジタル保存の行為であり、独占的システムの避けられない陳腐化に対する保険なのです。
-                    </p>
-
-                    <p>これはハイリーのアプローチを軽視するものではありません——彼のシステムは明らかに彼にとって機能しており、複雑さの削減は真に価値があります。しかし、これはデジタル整理における根本的な緊張を浮き彫りにします：利便性と制御、統合と独立性の間のトレードオフです。Apple
-                        Notesはシームレスな同期とネイティブ最適化を提供し、ポータブル形式は永続性とプラットフォームの自由を提供します。</p>
-
-                    <p>理想は側につくことではなく、何を最適化するかについての意識的な意図性にあるのかもしれません。一時的なメモと迅速なキャプチャには、ネイティブアプリの利便性が完全に理にかなっています。数十年にわたって保存し、構築し続けたい知識については、オープン形式の耐久性が魅力的になります。重要なのは、どのタイプの情報を扱っているかを認識し、それに応じてツールを選択することです。
-                    </p>
-
-                    <p>他の人の整理の旅を見ることで、私自身の好みについて明確性を得ました：私は利便性よりもポータビリティを、統合よりも長寿命を選びます。確かにトレードオフですが、デジタル自給自足と長期的思考という私の価値観に一致しています。時として最良のシステムは、最も効率的なものではなく、20年後もまだ機能しているものなのです。
-                    </p>
                 </div>
 
                 <nav class="article-nav">
